@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-07-12 mmichaud <michael.michaud@free.fr>
+  * Select and activate SelectFeaturesTool the first time OpenJUMP is opened
+    Selection is made in OpenJUMPConfiguration and activation in JUMPWorkbench
+
 2012-07-12 Matthias Scholz <ms@jammerhund.de>
   * new DetachableInternalFrame class for detachable internal frames such as
     the InfoFrame and the ViewAttributesFrame (ViewAttributesPlugIn)
